# graphblas-api-c

./: .gitignore  COPYRIGHT.txt  DOE-LBL-copyright.rtf  LICENSE.txt  README.md  albertjancomments3103.txt  appendix-A-examples.tex  ch1-introduction.tex  ch2-functions.tex  extract_assign.docx  titlepage.tex
GABB17/: Algebra_Hierarchy_v2.vsdx  BC-execution.pptx  GABB17.bib  GABB17.pptx  GABB17.tex  GabbBC1M.c  GabbBC3M.c  GabbBC4M.c  GrBAPI.tex  GrBmath.tex  GraphBLAS.h  GraphBLAS_March2017.pptx  Makefile  Methods.pptx  concepts.tex  conclusion.tex  exampleBC.tex  galla-example-execution.rtf  intro.tex  results.tex
HPEC17/: ._GrBDescrip.tex  ._GrB_futures_hpec17.tex  ._ack.tex  ._conclusion.tex  ._dag.tex  ._inspecExec.tex  ._intro.tex  ._kronProd.tex  ._makefile  ._masks.tex  ._stddefs.tex  ._usrTypes.tex  GrB.bib  GrBDescrip.tex  GrB_futures_hpec17.tex  ack.tex  conclusion.tex  dag.tex  experiment.tex  inspecExec.tex  intro.tex  kronProd.tex  makefile  masks.tex  promotion.tex  stddefs.tex  usrTypes.tex
HPEC18_tutorial/: Plans_GraphBLASTutorial_HPEC2018.docx
HPEC18_tutorial/code/: CMakeLists.txt  README
HPEC18_tutorial/code/tutorial/: Makefile  bfs.c  hpec_ex1_hello_world.c  hpec_ex2_neighbors.c  hpec_ex34_parent_bfs.c  hpec_ex3_level_bfs.c  hpec_ex4_bfs_parents.c
code/aydin/: graphblas.h  hw1.cpp
code/scott/: hw1.cpp  masked_mxm_homework.cpp  operations.hpp
graph-api-c/: Algebra_Hierarchy.vsdx  Algebra_Hierarchy_alternative.vsdx  Algebra_Hierarchy_v2.vsdx  BC1.c  BC1AL.c  BC1M.c  BC1M_update.c  BC1Mstd.c  BC1_batch.c  BFS5.c  BFS5AL.c  BFS5M.c  BFS6_apply.c  BFS7_parents.c  GabbBC4M.c  GraphBLAS_API_C.synctex(busy)  GraphBLAS_API_C.tex  GraphBLAS_API_C_quick_reference.tex  MIS1.c  MIS1.vector_assign.c  Makefile  TC1.c  algebra_methods.tex  appendices.tex  basic_concepts.tex  context_methods.tex  descriptor_methods.tex  error_methods.tex  extensions.tex  free_methods.tex  graphblas_operations.tex  matrix_assign.tex  matrix_formats.pptx  mxm_operation_flowchart.vsdx  nonpolymorphic.tex  objects.tex  ops_accum_z_matrix.tex  ops_accum_z_vector.tex  ops_apply.tex  ops_apply_binary_function.tex  (+28 more)
graph-api-c/ops_tmp/: 4.3.1-mxm.tex  4.3.10-transpose.tex  4.3.2-vxm.tex  4.3.3-mxv.tex  4.3.4.1-eWiseMult-vector.tex  4.3.4.2-eWiseMult-matrix.tex  4.3.5.1-eWiseAdd-vector.tex  4.3.5.2-eWiseAdd-matrix.tex  4.3.6.1-extract-vector.tex  4.3.6.2-extract-matrix.tex  4.3.6.3-extract-column.tex  4.3.7.1-assign-vector.tex  4.3.7.2-assign-matrix.tex  4.3.7.3-assign-column.tex  4.3.7.4-assign-row.tex  4.3.7.5-assign-constant-vector.tex  4.3.7.6-assign-constant-matrix.tex  4.3.8.1-apply-vector.tex  4.3.8.2-apply-matrix.tex  4.3.9.1-reduce-mat2vec.tex  4.3.9.2-reduce-vec2scalar.tex  4.3.9.3-reduce-mat2scalar.tex
include/: GraphBLAS.h
latex/: ch2-functions.tex  graphblas-1.0.tex  graphblas.sty  titlepage.tex
latex/figures/: GraphBLAS-Figures.pptx
meetingdocs/: GrB_get_set_proposal.md  queryProposal.md
mitbook/: NewMathSample.aux  NewMathSample.bbl  NewMathSample.idx  NewMathSample.ind  NewMathSample.lof  NewMathSample.lot  NewMathSample.tex  NewMathSample.toc  NewMathTemplate.tex  mit-chicago.bst  newmath.cls  readme.txt
multihreaded/: .example.cc.swp  Makefile  error.cc  example.cc  graphblas.h  runerror.tcsh  runexample.tcsh  threads.c
siambook/: MACROA-1-gray.EPS  MACROA-gray.EPS  MACROA2-gray.EPS  booksamp.aux  booksamp.blg  booksamp.brf  booksamp.dvi  booksamp.idx  booksamp.ilg  booksamp.ind  booksamp.loa  booksamp.lof  booksamp.lot  booksamp.ps  booksamp.tex  booksamp.tex.bak  booksamp.toc  box.eps  troubleshooting.txt
tutorials/: graph_blas_HPEC19_ClassNotes.pptx
tutorials/HPEC18_halfday/: README  graph_blas-HPEC18_ClassNotes.pptx
tutorials/HPEC18_halfday/code/: BuildAdjMatIndVec.c  BuildAdjMatTuple.c  BuildGraph.c  Makefile  betweenness_centrality.c  bfs_level.c  hpec_ex0.c  hpec_ex1_hello_world.c  hpec_ex2_neighbors.c  hpec_ex34_parent_bfs.c  hpec_ex3_level_bfs.c  hpec_ex4_bfs_parents.c  hpec_utils.h  matvec.c  matvecTrans.c  matvecTransIter.c  matvecTransIterLevels.c  maximal_independent_set.c  page_rank.c  triangle_count.c
